--- a/client/src/components/HowItWorks/HomeHeroSection/HomeHeroSection.module.sass
+++ b/client/src/components/HowItWorks/HomeHeroSection/HomeHeroSection.module.sass
@@ -1,32 +1,28 @@
 .homeHeroSection
   padding: 40px 50px
-  margin: 0 auto
-  max-width: 1040px
+  background: #fbfbff
   font-family: "Product Sans", sans-serif
-
-  @media (max-width: 1200px)
-    max-width: 960px
-
-  @media (max-width: 992px)
-    max-width: 720px
-    padding: 20px
-
-  @media (max-width: 768px)
-    max-width: 540px
 
   .homeHeroContainer
     display: flex
     justify-content: space-between
     align-items: center
     column-gap: 40px
+    margin: 0 auto
+    max-width: 1040px
 
     @media (max-width: 1200px)
       column-gap: 20px
-
+      max-width: 960px
 
     @media (max-width: 992px)
       flex-direction: column-reverse
       row-gap: 30px
+      max-width: 720px
+      padding: 20px
+
+    @media (max-width: 768px)
+      max-width: 540px
 
     .textBlock
       flex: 1
@@ -69,4 +65,11 @@
         padding-top: 56.25%
         position: relative
         width: 100%
+
+        iframe
+          border: none
+          position: absolute
+          top: 0
+          height: 100%
+          width: 100%
 
