Add Services section

--- a/client/src/components/HowItWorks/HomeHeroSection/HomeHeroSection.module.sass
+++ b/client/src/components/HowItWorks/HomeHeroSection/HomeHeroSection.module.sass
@@ -1,5 +1,9 @@
+@use '../HowItWorks.module.sass' as c
+  
 .homeHeroSection
-  padding: 40px 50px
+  @include c.paddingPage
+
+  padding: 60px 0
   background: #fbfbff
   font-family: "Product Sans", sans-serif
 
