--- a/client/src/components/HowItWorks/ServicesSection/ServicesSection.module.sass
+++ b/client/src/components/HowItWorks/ServicesSection/ServicesSection.module.sass
@@ -1,24 +1,12 @@
 @use '../HowItWorks.module.sass' as c
+
   
 .servicesSection
+  @include c.graySection
   @include c.paddingPage
 
-  padding: 80px 0
-  background: linear-gradient(271.19deg, rgba(48, 125, 246, .05) 0%, rgba(20, 187, 191, .05) 100%), #FFFFFF
-  font-family: "Product Sans", sans-serif
-
   .servicesContainer
-    max-width: 1480px
-    margin: 0 auto 40px auto
-
-    @media (max-width: 1200px)
-      max-width: 960px
-
-    @media (max-width: 992px)
-      max-width: 720px
-
-    @media (max-width: 768px)
-      max-width: 540px
+    @include c.grayContainer
 
     .titleContainer
       text-align: center
