Change label style

--- a/client/src/components/ContestForm/ContestForm.module.sass
+++ b/client/src/components/ContestForm/ContestForm.module.sass
@@ -46,6 +46,14 @@
   padding: 3px 20px
   color: #333
 
+.labelTitle
+  display: inline-block
+  font-size: 19px
+  color: #585859
+  font-weight: 700
+  margin-top: 12px
+  margin-bottom: 5px
+
 .textArea
   width: 550px
   height: 250px
@@ -64,7 +72,7 @@
   color: #555
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
   @media(max-width: 700px)
-    width: auto
+    width: 100%
 
   &:focus
     border: 2px solid #28d2d0
@@ -87,7 +95,7 @@
   color: #555
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
   @media(max-width: 700px)
-    width: auto
+    width: 100%
 
   &:focus
     border: 2px solid #28d2d0
@@ -125,30 +133,14 @@
       color: #555
       transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
       @media(max-width: 700px)
-        width: min-content
+        width: 100%
 
       &:focus
         border: 2px solid #28d2d0
 
-    .selectHeader
-      display: inline-block
-      font-size: 19px
-      color: #585859
-      font-weight: 700
-      margin-top: 12px
-      margin-bottom: 5px
-
 .inputContainer
   margin: 15px 0 0 0
   width: 100%
-
-  .inputHeader
-    display: inline-block
-    font-size: 19px
-    color: #585859
-    font-weight: 700
-    margin-top: 12px
-    margin-bottom: 5px
 
 
 .fileUploadContainer
