--- a/client/src/components/Events/EventsList/EventItem/EventItem.module.sass
+++ b/client/src/components/Events/EventsList/EventItem/EventItem.module.sass
@@ -1,17 +1,34 @@
 .item
-  display: flex
-  justify-content: space-between
+  position: relative
   padding: 15px
+  overflow: hidden
   border-radius: 5px
   background-color: #f0f0f0
 
-  h3
-    font-size: 18px
-    font-weight: 500
+  .info
+    position: relative
+    display: flex
+    justify-content: space-between
 
-  .time
-    font-size: 14px
-    font-weight: 500
-    color: #8d8d8d
+    h3
+      font-size: 18px
+      font-weight: 500
 
-    
+    .time
+      font-size: 14px
+      font-weight: 500
+      color: #8d8d8d
+
+  .progressBar
+    position: absolute
+    left: 0
+    top: 0
+    height: 100%
+    background: #cde5cb
+    width: 20%
+  .reminderBar
+    position: absolute
+    width: 2px
+    height: 100%
+    top: 0
+    background: #f5d76e
