Add icon to remaining block

--- a/client/src/components/Events/EventsList/EventsList.module.sass
+++ b/client/src/components/Events/EventsList/EventsList.module.sass
@@ -1,6 +1,6 @@
 .container
   margin-top: 30px
-  padding: 15px
+  padding: 20px
   border: 2px solid #d0d0d0
   border-radius: 5px
   max-width: 800px
@@ -16,10 +16,14 @@
       font-size: 24px
       font-weight: 500
 
-    .remaining
-      font-size: 16px
-      font-weight: 500
-      margin-right: 10px
+    .remainingBlock
+      display: flex
+      align-items: center
+
+      .remainingText
+        font-size: 16px
+        font-weight: 500
+        margin-right: 10px
   .eventsList
     display: flex
     margin-top: 15px
