--- a/client/src/components/Events/EventsList/EventItem/EventItem.module.sass
+++ b/client/src/components/Events/EventsList/EventItem/EventItem.module.sass
@@ -1,23 +1,12 @@
+.container
+  position: relative
+
 .item
   position: relative
   padding: 15px
   overflow: hidden
   border-radius: 5px
   background-color: #f0f0f0
-
-  .info
-    position: relative
-    display: flex
-    justify-content: space-between
-
-    h3
-      font-size: 18px
-      font-weight: 500
-
-    .time
-      font-size: 14px
-      font-weight: 500
-      color: #8d8d8d
 
   .progressBar
     position: absolute
@@ -26,9 +15,100 @@
     height: 100%
     background: #cde5cb
     width: 20%
+
   .reminderBar
     position: absolute
     width: 2px
     height: 100%
     top: 0
     background: #f5d76e
+
+  .eventInfo
+    position: relative
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+    h3
+      font-size: 18px
+      font-weight: 500
+
+    .info
+      .deleteButton
+        border: 0
+        background: none
+        position: absolute
+        top: 50%
+        transform: translateY(-50%)
+        right: -50px
+        margin: 0
+        margin-bottom: -4px
+        padding: 0
+        border-left: 1px solid #d0d0d0
+        padding: 0 5px
+        // visibility: hidden
+        transition: all 0.1s linear
+
+        &.active
+          visibility: visible
+          right: -10px
+
+        &:hover
+          opacity: 50%
+
+        svg
+          font-size: 1.5rem
+          margin: 0
+          padding: 0
+
+
+      .time
+        font-size: 14px
+        font-weight: 500
+        color: #8d8d8d
+        transition: all 0.1s linear
+
+        &.margin
+          margin-right: 40px
+
+
+.warning
+  position: absolute
+  top: -8px
+  right: -95px
+  background: #fff
+  border: 2px solid #d0d0d0
+  padding: 7px
+  font-size: 12px
+  font-weight: 500
+  border-radius: 5px
+  transition: all 0.05s linear
+  visibility: hidden
+
+
+  &.visible
+    opacity: 1
+    visibility: visible
+    
+  .buttons
+    margin-top: 8px
+    display: flex
+    justify-content: space-around
+
+  button
+    border: 0
+    background: none
+    color: white
+
+    svg
+      font-size: 1.5em
+
+    &.accept
+      background-color: #888
+      border-radius: 25%
+
+    &.reject
+      background-color: #f3875d
+      border-radius: 25%
+
+
