Add message if errors isn't exists

--- a/client/src/components/Events/EventsList/EventsList.module.sass
+++ b/client/src/components/Events/EventsList/EventsList.module.sass
@@ -27,5 +27,6 @@
   .eventsList
     display: flex
     margin-top: 15px
+    justify-content: center
     flex-direction: column
     row-gap: 10px
