--- a/client/src/pages/Events/Events.module.sass
+++ b/client/src/pages/Events/Events.module.sass
@@ -1,3 +1,15 @@
-.container 
-  max-width: 1200px
-  margin: 80px auto
+.wrapper
+  background: #f8f8f8
+  padding: 80px 0
+
+  @media screen and (max-width: 992px)
+    padding: 60px 0
+  
+  .container 
+    max-width: 800px
+    margin: 0 auto
+    padding: 0 30px
+
+    @media screen and (max-width: 992px)
+      max-width: 700px
+      padding: 0 15px
