Add event button in header

--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -146,9 +146,16 @@
       @media(max-width: 320px)
         margin-left: 0
 
-      .emailIcon
+      .icon
         padding: 0 15px
+        width: 22px
         border-right: 1px solid #ebebeb
+        color: #718888
+        transition: opacity 0.1s linear
+
+        &:hover
+          opacity: 0.7
+          
 
       .userInfo
         display: flex
