--- a/client/src/components/LoginForm/LoginForm.module.sass
+++ b/client/src/components/LoginForm/LoginForm.module.sass
@@ -36,7 +36,7 @@
     margin-right: 20px
     margin-left: 20px
 
-    .fieldWarning
+    .warning
       font-size: 15px
       display: flex
       flex-direction: row
