Replacing small images with icons

--- a/client/src/components/ContestSideBar/ContestSideBar.module.sass
+++ b/client/src/components/ContestSideBar/ContestSideBar.module.sass
@@ -112,14 +112,9 @@
         padding: 0 15px
         margin-bottom: 15px
 
-        div
-          border-radius: 8px
-          display: flex
-          justify-content: center
-          align-items: center
-          width: 16px
-          height: 16px
-          background-color: #8aca6b
+        svg
+          font-size: 18px
+          color: #8aca6b
 
         span
           font-size: 14px
@@ -144,6 +139,9 @@
           display: flex
           align-items: center
 
+          svg
+            font-size: 20px
+
           span
             font-size: 14px
             color: #333
@@ -162,4 +160,8 @@
         font-size: 22px
         font-weight: 600
         margin-left: 10px
+
+      svg
+        color: white
+        font-size: 28px
 
