--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -148,7 +148,7 @@
 
       .icon
         padding: 0 15px
-        width: 22px
+        font-size: 22px
         border-right: 1px solid #ebebeb
         color: #718888
         transition: opacity 0.1s linear
@@ -227,7 +227,7 @@
       @media(max-width: 360px)
         padding: 0 5px
         margin-left: 0
-
+      
       span
         color: #337ab7
         font-size: 14px
