--- a/client/src/components/Chat/ChatComponents/ChatInput/ChatInput.module.sass
+++ b/client/src/components/Chat/ChatComponents/ChatInput/ChatInput.module.sass
@@ -26,18 +26,19 @@
       outline: none
       cursor: pointer
 
-    img
-      position: absolute
-      margin-left: 20px
-      cursor: pointer
-      top: -15px
-      left: -8px
-      transition: transform 0.2s ease
-      transform: rotate(150deg)
+      svg
+        position: absolute
+        margin-left: 20px
+        cursor: pointer
+        top: -18px
+        left: -5px
+        color: #0073ff
+        font-size: 36px
+        transition: transform 0.2s ease
+        transform: rotate(205deg)
 
-      &:hover
-        width: 35px
-        height: 35px
+        &:hover
+          transform: rotate(205deg) scale(1.3)
 
     .container
       display: flex
