--- a/client/src/components/OffersContainer/OffersContainer.module.sass
+++ b/client/src/components/OffersContainer/OffersContainer.module.sass
@@ -1,7 +1,10 @@
 .offerContainer
-  .title
+  .emptyNotification
+    margin-top: 30px
     font-size: 24px
     font-weight: 500
+    color: #4e618d
+    text-align: center
   
   .offersList
     display: flex
