--- a/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
+++ b/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
@@ -2,6 +2,7 @@
   max-width: 820px
   margin: 0 auto
   margin-top: 50px
+  margin-bottom: 100px
   justify-content: flex-start
 
   .offerContainer
