--- a/client/src/components/OffersContainer/OffersContainer.module.sass
+++ b/client/src/components/OffersContainer/OffersContainer.module.sass
@@ -10,3 +10,17 @@
     display: flex
     flex-direction: column
     row-gap: 20px
+
+  .loadMore
+    display: block
+    margin: 50px auto 0 auto
+    text-align: center
+    padding: 10px 22px
+    border: 2px solid #28d2d0
+    color: #28d2d0
+    border-radius: 5px
+    font-size: 14px
+    font-weight: 400
+    cursor: pointer
+    // background-color: #fff
+    transition: background-color 0.2s linear
