--- a/client/src/components/OffersContainer/OffersItem/OffersItem.module.sass
+++ b/client/src/components/OffersContainer/OffersItem/OffersItem.module.sass
@@ -18,6 +18,7 @@
   column-gap: 30px
   background-color: #f9fafb
   color: #4e618d
+  word-break: break-all
 
   .contestInfo
     margin-bottom: 10px
@@ -38,6 +39,13 @@
     column-gap: 15px
     align-items: center
     margin-bottom: 10px
+
+    .userScoreLabel
+      font-weight: 500
+
+  .offerSpan
+    font-weight: 500
+    margin-right: 10px
 
   .btnsContainer
     margin: 5px 0
