Refactor pagination in ModeratorDashboard

--- a/client/src/components/OffersContainer/OffersContainer.module.sass
+++ b/client/src/components/OffersContainer/OffersContainer.module.sass
@@ -24,3 +24,10 @@
     cursor: pointer
     // background-color: #fff
     transition: background-color 0.2s linear
+
+.spinnerContainer
+  display: flex
+  flex: 1
+  align-items: center
+  justify-content: flex-start
+  margin-top: 20px
