--- a/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
+++ b/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
@@ -9,3 +9,10 @@
     display: flex
     flex-direction: column
     row-gap: 20px
+
+.messageContainer
+  margin-top: 20px
+  display: flex
+  justify-content: center
+  align-items: flex-start
+  flex: 1
