--- a/client/src/components/CreatorDashboard/CreatorDashboard.module.sass
+++ b/client/src/components/CreatorDashboard/CreatorDashboard.module.sass
@@ -91,9 +91,9 @@
           background-color: #556da5
           color: white
 
-      .activeCheckboxBtn
-        color: white
-        background-color: #556da5
+        &--active
+          color: white
+          background-color: #556da5
 
       .inputContainer
         display: flex
