--- a/client/src/components/UserInfo/UserInfo.module.sass
+++ b/client/src/components/UserInfo/UserInfo.module.sass
@@ -6,7 +6,7 @@
   border: 1px solid #c0c0c0
   border-radius: 4px
   width: 100%
-  @media(max-width: 420px)
+  @media(max-width: 560px)
     flex-direction: column
     justify-content: flex-start
     align-items: center
@@ -17,13 +17,11 @@
     background-color: #455a89
     color: white
     font-weight: 500
-    margin-top: 100px
+    margin: 100px 30px 0 50px
     font-size: 18px
-    margin-left: 50px
     transition: background-color 0.2s
-    @media(max-width: 420px)
+    @media(max-width: 560px)
       margin: 20px 0
-      margin-left: 0
 
     &:hover
       transition: background-color 0.2s
@@ -42,20 +40,11 @@
       height: 140px
       margin: 40px 0
 
-    .infoBlock
-      display: flex
-      flex-direction: row
-      margin-bottom: 25px
-      align-items: center
-      width: 200px
-      justify-content: space-between
+  .userInfoContainer
+    min-width: 300px
+    max-width: 500px
+    margin: 0 30px
+    @media (max-width: 560px)
+      margin: 0 20px
 
-      .label
-        font-family: sans-serif
-        font-size: 16px
-        color: #515b5f
-
-      .info
-        font-size: 16px
-        color: #455a89
 
