--- a/client/src/components/UserInfo/UserInfo.module.sass
+++ b/client/src/components/UserInfo/UserInfo.module.sass
@@ -3,23 +3,35 @@
   flex-direction: row
   justify-content: center
   align-items: flex-start
+  column-gap: 40px
   border: 1px solid #c0c0c0
   border-radius: 4px
+  padding: 40px
   width: 100%
+  @media(max-width: 800px)
+    flex-direction: column
+    align-items: center
+    column-gap: 0
+    width: auto
   @media(max-width: 560px)
+    padding: 20px 15px
     flex-direction: column
     justify-content: flex-start
     align-items: center
 
   .buttonEdit
+    border: 0
     padding: 15px 35px
     border-radius: 12px
     background-color: #455a89
     color: white
     font-weight: 500
-    margin: 100px 30px 0 50px
+    margin-top: 100px 
     font-size: 18px
     transition: background-color 0.2s
+    @media(max-width: 800px)
+      margin-top: 20px
+
     @media(max-width: 560px)
       margin: 20px 0
 
@@ -31,20 +43,20 @@
   .infoContainer
     display: flex
     flex-direction: column
-    justify-content: flex-end
-    align-items: center
+    max-width: 500px
+    width: 100%
 
     .avatar
       align-self: center
-      width: 140px
-      height: 140px
-      margin: 40px 0
+      width: 175px
+      height: 175px
+      margin-bottom: 40px
+      padding: 2px
+      border: 1px solid #c0c0c0
+      border-radius: 4px
 
   .userInfoContainer
     min-width: 300px
     max-width: 500px
-    margin: 0 30px
-    @media (max-width: 560px)
-      margin: 0 20px
 
 
