--- a/client/src/pages/UserProfile/UserProfile.module.sass
+++ b/client/src/pages/UserProfile/UserProfile.module.sass
@@ -1,13 +1,17 @@
 .mainContainer
   margin: 0 auto
   display: flex
+  column-gap: 40px
   flex-direction: row
   align-items: flex-start
   justify-content: flex-start
   padding: 100px
-  @media(max-width: 800px)
+  @media (max-width: 920px)
     padding: 40px
+    column-gap: 30px
+  @media(max-width: 800px)
     flex-direction: column
+    align-items: stretch
   @media(max-width: 590px)
     padding: 15px
   @media(max-width: 345px)
@@ -28,7 +32,6 @@
     padding-top: 30px
 
   .aside
-    margin-right: 40px
     display: flex
     flex-direction: column
     align-items: flex-start
