--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -48,7 +48,7 @@
       .nav
         display: flex
 
-        ul
+        .navList
           margin: 0
           list-style: none
           display: flex
@@ -60,69 +60,64 @@
             flex-direction: column
             align-items: flex-start
 
-          &:last-child li
-            ul
-              width: 200px
-
-          li
+          .navItem
             display: flex
             align-items: center
             justify-content: flex-start
             margin-right: 30px
             @media(max-width: 700px)
               width: 100%
+              position: relative
               padding: 0 15px
-
             &:hover
               span
                 color: #f27e51
 
-              ul
+              .navSubMenu
                 display: block
                 position: absolute
                 border: 1px solid #eee
                 z-index: 1000
-                top: 130px
+                top: 125px
                 background-color: white
                 @media(max-width: 700px)
-                  top: auto
-                  left: 145px
-
-            ul
-              padding: 0
-              margin: 0
-              width: 160px
-              display: none
-
-              .last
-                width: 100%
-                padding-top: 8px
-                box-sizing: border-box
-                border-top: 1px solid aquamarine
-
-              li
-                box-sizing: border-box
-                width: 100%
-                padding: 10px 15px
-                display: flex
-                justify-content: flex-start
-
-                &:hover
-                  background: #f9fafb
-
-                a
-                  font-size: 12px
-                  text-decoration: none
-                  color: #333
-
-                  &:hover
-                    color: #f27e51
+                  top: 15px
+                  left: 120px
 
             span
               color: #495d8b
               font-size: 15px
               font-weight: 300
               padding: 15px 0
+
+            .navSubMenu
+              padding: 0
+              margin: 0
+              width: 200px
+              display: none
+
+              li
+                box-sizing: border-box
+                width: 100%
+                display: flex
+                justify-content: flex-start
+
+                &:last-child
+                  width: 100%
+                  box-sizing: border-box
+                  border-top: 1px solid aquamarine
+                &:hover
+                  background: #f9fafb
+
+                  a
+                    color: #f27e51
+
+                a
+                  font-size: 12px
+                  text-decoration: none
+                  color: #333
+                  padding: 10px 15px
+                  width: 100%
 
   .loginSignnUpHeaders
     margin-top: 30px
