--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -158,6 +158,9 @@
         align-items: center
         padding: 0 15px
         border-right: 1px solid #ebebeb
+        @media(max-width: 700px)
+          & > span
+            display: none
 
         &:hover
           ul
