--- a/client/src/components/Chat/ChatComponents/ChatInput/ChatInput.module.sass
+++ b/client/src/components/Chat/ChatComponents/ChatInput/ChatInput.module.sass
@@ -14,50 +14,48 @@
 
   .form
     display: flex
-    flex-direction: row
     justify-content: space-between
     align-items: center
 
     button
+      display: flex
       position: relative
       padding: 0
       border: none
-      background-color: white
-      outline: none
+      background-color: transparent
       cursor: pointer
 
       svg
-        position: absolute
-        margin-left: 20px
-        cursor: pointer
-        top: -18px
-        left: -5px
         color: #0073ff
-        font-size: 36px
+        font-size: 32px
         transition: transform 0.2s ease
-        transform: rotate(205deg)
+        transform: rotate(180deg)
 
         &:hover
-          transform: rotate(205deg) scale(1.3)
+          transform: rotate(180deg) scale(1.3)
 
     .container
+      position: relative
       display: flex
-      padding: 0 15px
+      flex-direction: column
+      padding-right: 15px
       justify-content: flex-start
       align-items: center
 
-      .fieldWarning
-        font-size: 15px
+      .warning
         display: flex
-        flex-direction: row
         justify-content: center
         align-items: center
+        font-size: 12px
         color: white
         border: 1px solid #b72522
-        margin-bottom: 15px
-        padding-bottom: 5px
-        padding-top: 5px
+        border-radius: 6px
+        background-color: #b72522
+        padding: 4px
         text-align: center
+        position: absolute
+        bottom: -25px
+        
 
       .notValid
         border: 1px solid red !important
