--- a/client/src/components/Chat/ChatComponents/ChatHeader/ChatHeader.module.sass
+++ b/client/src/components/Chat/ChatComponents/ChatHeader/ChatHeader.module.sass
@@ -14,6 +14,11 @@
     justify-content: center
     align-items: center
     cursor: pointer
+    transition: transform 0.2s ease
+
+    &:hover
+      transition: transform 0.2s ease
+      transform: translateX(-3px)
 
   .infoContainer
     flex: 1
@@ -34,12 +39,12 @@
       i
         margin-right: 10px
         font-size: 18px
-        transition: font-size 0.2s ease
+        transition: transform 0.2s ease
 
-        &:hover
-          font-size: 22px
-          color: red
-          transition: font-size 0.2s ease
+        &:hover > svg
+          transform: scale(1.2)
+          color: red !important
+          transition: transform 0.2s ease
 
       img
         height: 44px
