--- a/client/src/components/Chat/ChatComponents/ChatHeader/ChatHeader.module.sass
+++ b/client/src/components/Chat/ChatComponents/ChatHeader/ChatHeader.module.sass
@@ -14,6 +14,8 @@
     justify-content: center
     align-items: center
     cursor: pointer
+    font-size: 24px
+    color: white
     transition: transform 0.2s ease
 
     &:hover
@@ -29,7 +31,6 @@
 
     div
       display: flex
-      flex-direction: row
       justify-content: center
       align-items: center
 
