--- a/client/src/components/Chat/CatalogComponents/CreateCatalog/CreateCatalog.module.sass
+++ b/client/src/components/Chat/CatalogComponents/CreateCatalog/CreateCatalog.module.sass
@@ -1,7 +1,7 @@
 .form
   background-color: #8aca6b
-  height: 110px
   display: flex
+  padding: 10px
   flex-direction: column
   align-items: center
   justify-content: center
@@ -22,19 +22,13 @@
     flex-direction: column
     justify-content: center
     align-self: stretch
-    background-color: #8aca6b
-    height: 60px
-    padding: 0 10px
+    margin-bottom: 10px
 
     .fieldWarning
-      margin-top: 12px
+      margin-top: 10px
       border-radius: 4px
       font-size: 15px
-      display: flex
       padding: 4px 6px
-      flex-direction: row
-      justify-content: center
-      align-items: center
       color: white
       border: 1.5px solid #b72522
       text-align: center
