--- a/client/src/components/Chat/CatalogComponents/CatalogCreation/CatalogCreation.module.sass
+++ b/client/src/components/Chat/CatalogComponents/CatalogCreation/CatalogCreation.module.sass
@@ -7,12 +7,12 @@
   z-index: 500
   color: white
 
-  i
+  svg
     position: absolute
-    font-size: 22px
     top: -7px
     left: -7px
     z-index: 700
+    font-size: 22px
     cursor: pointer
     color: #4e618d
     background-color: white
@@ -23,15 +23,13 @@
 
   .buttonsContainer
     display: flex
-    flex-direction: row
     justify-content: flex-start
     align-items: center
 
     span
-      background-color: #8aca6b
+      background-color: #4e618d
       border-top-right-radius: 8px
       border-top-left-radius: 8px
-      border: 1px solid white
       border-bottom: none
       cursor: pointer
       height: 24px
@@ -48,10 +46,10 @@
         border-right: none
 
     .active
-      background-color: #4e618d
+      background-color: #8aca6b
       flex: 1.3
       z-index: 600
 
       &:hover
+        background-color:#8aca6b
         color: white
-        background-color: #4e618d
