--- a/client/src/components/Chat/CatalogComponents/Catalog/Catalog.module.sass
+++ b/client/src/components/Chat/CatalogComponents/Catalog/Catalog.module.sass
@@ -1,6 +1,5 @@
 .catalogContainer
   display: flex
-  flex-direction: row
   justify-content: space-between
   align-items: center
   min-height: 50px
@@ -17,15 +16,15 @@
     .numbers
       margin-left: 5px
 
-    i
+    svg
       margin-left: 10px
       font-size: 18px
-      transition: font-size 0.2s
+      transition: transform 0.2s
 
       &:hover
         color: red
-        font-size: 24px
-        transition: font-size 0.2s
+        transform: scale(1.2)
+        transition: transform 0.2s
 
   &:hover
     background-color: #e5e5e5
