--- a/client/src/components/LoginForm/LoginForm.module.sass
+++ b/client/src/components/LoginForm/LoginForm.module.sass
@@ -1,10 +1,17 @@
 .loginForm
-  width: 600px
+  max-width: 600px
   display: flex
   flex-direction: column
   align-items: stretch
   justify-content: center
   padding: 10px 20px 30px
+  margin: 0 auto
+  margin-top: 80px
+  @media (max-width: 900px)
+    width: auto
+    padding: 0
+  @media (max-width: 568px)
+    margin-top: 40px
 
   .submitContainer
     align-self: stretch
@@ -15,14 +22,11 @@
     align-items: center
     background-color: #28d2d0
     height: 64px
-    margin-left: 20px
     padding: 0
     border: 0
     width: fill-available
-    margin-right: 20px
     @media(max-width: 850px)
       align-self: auto
-
 
   .inscription
     font-size: 16px
@@ -33,8 +37,6 @@
     flex-direction: column
     justify-content: center
     align-self: stretch
-    margin-right: 20px
-    margin-left: 20px
 
     .warning
       font-size: 15px
