--- a/client/src/components/RegistrationForm/RegistrationForm.module.sass
+++ b/client/src/components/RegistrationForm/RegistrationForm.module.sass
@@ -1,24 +1,100 @@
 .signUpFormContainer
-  width: 60%
-  display: flex
   min-width: 280px
-  margin: 0 auto
+  display: flex
+  align-items: center
   flex-direction: column
   justify-content: center
-  align-items: center
+  margin: 0 auto
   margin-top: 80px
-  padding: 10px 20px 30px
   box-sizing: border-box
+  color: white
+  @media (max-width: 568px)
+    margin-top: 40px
+
+  .headerFormContainer
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    margin-bottom: 18px
+    text-align: center
+    line-height: 1.1
+
+    h2
+      font-size: 42px
+      font-weight: 700
+      margin-top: 20px
+      margin-bottom: 10px
+      letter-spacing: 1px
+
+    h4
+      font-size: 20px
+      font-weight: 500
+      word-spacing: 3px
+      width: 90%
+      margin-bottom: 13px
+      line-height: 1.3
+
+  .inputsContainer
+    width: 100%
+    min-width: 260px
+    display: grid
+    grid-template-columns: 1fr 1fr
+    gap: 20px    
+    @media (max-width: 768px)
+      grid-template-columns: 1fr
+      width: auto
+
+    .inputContainer
+      display: flex
+      flex-direction: column
+      justify-content: center
+      align-self: flex-start
+      flex: 1 1
+
+      .fieldWarning
+        font-size: 16px
+        font-weight: 500
+        margin-top: 10px
+        border-radius: 4px
+        padding: 8px 15px
+        text-align: left
+        position: relative
+        background-color: #ff6161
+        
+        &:before
+          content: ''
+          display: inline-block
+          position: absolute
+          transform: rotate(45deg)
+          left: 20px
+          top: -5px
+          width: 10px
+          height: 10px
+          background-color: #ff6161
+          
+    .input
+      border: none
+      border-radius: 4px
+      color: #9ca8b7
+      font-size: 18px
+      padding: 23px 20px
+      outline: none
+      flex: 1
+
+    .notValid
+      border: 2px solid red !important
+
+    .valid
+      border: 2px solid green
 
   .choseRoleContainer
     display: flex
     flex-direction: column
     justify-content: center
-    align-items: stretch
-    align-self: stretch
     min-width: 260px
-    margin-left: 20px
-    margin-right: 20px
+    gap: 20px
+    margin-top: 20px
     @media(max-width: 850px)
       align-self: auto
 
@@ -31,37 +107,29 @@
     align-items: center
     background-color: #28d2d0
     height: 64px
-    margin-left: 20px
     padding: 0
     border: 0
+    font-size: 20px
+    color: white
     width: fill-available
-    margin-right: 20px
+    margin-top: 20px
     @media(max-width: 850px)
       align-self: auto
 
-
-  .inscription
-    font-size: 16px
-    color: white
-
   .termsOfService
     text-align: center
-    color: white
     font-size: 16px
     min-width: 260px
-    align-self: stretch
-    margin-right: 20px
-    margin-left: 20px
-    margin-bottom: 10px
-
+    margin: 10px 20px
+    
+    input
+      margin-right: 10px
 
     .fieldWarning
       font-size: 15px
       display: flex
-      flex-direction: row
       justify-content: center
       align-items: center
-      color: white
       border: 1px solid #b72522
       margin-bottom: 15px
       padding-bottom: 5px
@@ -75,10 +143,8 @@
       color: white
       font-size: 16px
 
-
   .error
     text-align: center
-    color: white
     font-size: 20px
     min-width: 260px
     align-self: stretch
@@ -92,85 +158,3 @@
     margin-bottom: 10px
     @media(max-width: 850px)
       align-self: auto
-
-  .row
-    width: 100%
-    min-width: 260px
-    display: flex
-    flex-direction: row
-    flex-wrap: wrap
-    align-items: center
-    justify-content: space-between
-    @media (max-width: 795px)
-      width: auto
-
-    .inputContainer
-      display: flex
-      flex-direction: column
-      justify-content: center
-      align-self: flex-start
-      margin-right: 20px
-      margin-left: 20px
-      flex: 1 1
-
-      .fieldWarning
-        font-size: 15px
-        display: flex
-        flex-direction: row
-        justify-content: center
-        align-items: center
-        color: white
-        border: 1px solid #b72522
-        margin-bottom: 15px
-        padding-bottom: 5px
-        padding-top: 5px
-        text-align: center
-
-    .input
-      background-color: white
-      border: none
-      border-radius: 4px
-      color: #9ca8b7
-      font-size: 18px
-      padding: 23px 20px 23px 20px
-      outline: none
-      margin-bottom: 15px
-      flex: 1
-      @media(max-width: 1400px)
-        align-self: normal
-
-    .notValid
-      border: 2px solid red !important
-
-    .valid
-      border: 2px solid green
-
-
-  .headerFormContainer
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    margin-bottom: 18px
-    text-align: center
-
-
-    h2
-      color: white
-      font-size: 42px
-      font-weight: 600
-      line-height: 1.1
-      margin-top: 20px
-      margin-bottom: 10px
-      letter-spacing: 1px
-
-    h4
-      color: white
-      font-size: 20px
-      font-weight: 500
-      word-spacing: 3px
-      width: 88%
-      margin: 0
-      margin-bottom: 13px
-      text-align: center
-      line-height: 27px
