--- a/client/src/pages/RegistrationPage/RegistrationPage.module.sass
+++ b/client/src/pages/RegistrationPage/RegistrationPage.module.sass
@@ -1,23 +1,23 @@
 .signUpPage
   background-color: #3ea9f5
-  display: flex
-  flex-direction: column
-  align-items: center
 
   .footer
-    padding-top: 80px
+    padding: 80px 0
+    width: 100%
     background: white
     display: flex
     justify-content: center
+    @media (max-width: 768px)
+      padding: 60px 0
 
     .articlesMainContainer
-      width: 60%
+      max-width: 1600px
       display: flex
       min-width: 300px
       flex-direction: row
       justify-content: center
       align-items: flex-start
-      @media(max-width: 1000px)
+      @media(max-width: 768px)
         flex-direction: column
 
       .ColumnContainer
@@ -25,9 +25,10 @@
         flex-direction: column
         justify-content: flex-start
         align-items: flex-start
-        margin-right: 48px
-        margin-left: 48px
+        margin: 0 48px
         flex: 1
+        @media (max-width: 480px)
+          margin: 0 30px
 
         .headerArticle
           font-size: 16px
@@ -45,38 +46,3 @@
 
           .orangeSpan
             color: #f18762
-
-  .signUpContainer
-    width: 72%
-    padding: 20px
-    min-width: 280px
-    min-height: 650px
-    padding-top: 40px
-
-
-    .headerSignUpPage
-      display: flex
-      flex-direction: row
-      justify-content: space-between
-      align-items: center
-      margin-top: 26px
-      padding-left: 45px
-      padding-right: 60px
-      @media (max-width: 530px)
-        padding: 0
-
-
-    .linkLoginContainer
-      border: 1px solid white
-      width: 80px
-      border-radius: 4px
-      display: flex
-      justify-content: center
-      align-items: center
-      font-size: 18px
-      font-weight: bold
-      height: 40px
-      text-decoration: none
-
-      span
-        color: white
