--- a/client/src/components/SlideBar/SlideBar.module.sass
+++ b/client/src/components/SlideBar/SlideBar.module.sass
@@ -3,10 +3,11 @@
   margin: 30px 0
   overflow-x: hidden
   position: relative
+  cursor: pointer
   @media(max-width: 1180px)
     width: 900px
   @media(max-width: 950px)
-    width: 750px
+    width: 700px
   @media(max-width: 750px)
     width: 650px
   @media(max-width: 680px)
@@ -17,47 +18,32 @@
     width: 350px
   @media(max-width: 320px)
     width: 250px
-  button
-    position: absolute
-    background: hsla(0, 0%, 100%, 0.75)
-    border: none
-    color: #333
-
 
 .mainCarousel
   @include carousel
 
+.exampleCarousel
+  @include carousel
 
 .feedbackCarousel
   @include carousel
 
-
-.exampleCarousel
-  @include carousel
-
-
-.example-cell
+.exampleCell
   display: flex
   flex-direction: column
   justify-content: flex-start
   align-items: flex-start
-  width: 30%
   height: 300px
-  margin-right: 30px
   border-top: 2px solid grey
   border-left: 1px solid grey
   border-right: 1px solid grey
   border-bottom: 0
-  cursor: pointer
-  @media(max-width: 950px)
-    height: 250px
-  @media(max-width: 680px)
-    width: 45%
-  @media(max-width: 320px)
-    width: 100%
+  @media(max-width: 580px)
     height: 250px
   @media(max-width: 480px)
-    height: 150px
+    height: 300px
+  @media(max-width: 320px)
+    width: 100%
 
   img
     flex: 1
@@ -67,7 +53,6 @@
     display: flex
     justify-content: center
     align-items: flex-start
-    cursor: pointer
     width: 100%
     background-color: #333333
     color: white
@@ -78,23 +63,16 @@
       background-color: #ff6f54
 
 
-.feedback-cell
+.feedbackCell
   display: flex
   flex-direction: column
   justify-content: flex-start
   align-items: center
-  width: 30%
   font-family: Raleway, sans-serif
   min-height: 310px
-  margin-right: 30px
   padding: 20px 20px 0 20px
   background-color: white
   color: black
-  cursor: pointer
-  @media(max-width: 680px)
-    width: 45%
-  @media(max-width: 320px)
-    width: 100%
   @media(max-width: 320px)
     width: 100%
 
@@ -120,23 +98,6 @@
     margin-top: auto
 
 
-.carousel-cell
-  width: 30%
-  height: 300px
-  margin-right: 30px
+.carouselCell
+  width: 100%
   border-radius: 3px
-  cursor: pointer
-  @media(max-width: 950px)
-    height: 250px
-  @media(max-width: 680px)
-    width: 45%
-  @media(max-width: 320px)
-    width: 100%
-  @media(max-width: 320px)
-    width: 100%
-    height: 250px
-  @media(max-width: 480px)
-    height: 150px
-
-
-
